--- a/client/package.json
+++ b/client/package.json
@@ -15,8 +15,13 @@
   },
   "devDependencies": {
     "@types/react": "17.0.19",
+    "@typescript-eslint/eslint-plugin": "^4.29.3",
+    "@typescript-eslint/parser": "^4.29.3",
     "eslint": "7.32.0",
     "eslint-config-next": "11.1.0",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-prettier": "^3.4.1",
+    "prettier": "^2.3.2",
     "typescript": "4.4.2"
   }
 }
