--- a/server/package.json
+++ b/server/package.json
@@ -1,8 +1,9 @@
 {
   "name": "server",
   "version": "0.0.1",
-  "description": "Awesome project developed with TypeORM.",
+  "description": "",
   "devDependencies": {
+    "@types/express": "^4.17.13",
     "@types/node": "^16.7.4",
     "@typescript-eslint/eslint-plugin": "^4.29.3",
     "eslint": "^7.32.0",
@@ -13,7 +14,9 @@
     "typescript": "4.4.2"
   },
   "dependencies": {
+    "express": "^4.17.1",
     "mysql": "^2.18.1",
+    "pg": "^8.7.1",
     "reflect-metadata": "^0.1.13",
     "typeorm": "0.2.37"
   },
