--- a/server/package.json
+++ b/server/package.json
@@ -3,25 +3,37 @@
   "version": "0.0.1",
   "description": "",
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.2",
+    "@types/cookie-parser": "^1.4.2",
+    "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
+    "@types/jsonwebtoken": "^8.5.5",
     "@types/node": "^16.7.4",
+    "@types/uuid": "^8.3.1",
     "@typescript-eslint/eslint-plugin": "^4.29.3",
     "eslint": "^7.32.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^3.4.1",
     "prettier": "^2.3.2",
     "ts-node": "10.2.1",
+    "ts-node-dev": "^1.1.8",
     "typescript": "4.4.2"
   },
   "dependencies": {
+    "bcryptjs": "^2.4.3",
+    "cors": "^2.8.5",
+    "dotenv": "^10.0.0",
     "express": "^4.17.1",
+    "jsonwebtoken": "^8.5.1",
     "mysql": "^2.18.1",
     "pg": "^8.7.1",
     "reflect-metadata": "^0.1.13",
-    "typeorm": "0.2.37"
+    "typeorm": "0.2.37",
+    "uuid": "^8.3.2"
   },
   "scripts": {
     "start": "ts-node src/index.ts",
+    "dev": "ts-node-dev src/index.ts",
     "lint": "eslint src",
     "format": "eslint src --fix"
   }
