--- a/server/package.json
+++ b/server/package.json
@@ -7,6 +7,7 @@
     "@types/cookie-parser": "^1.4.2",
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
+    "@types/express-fileupload": "^1.1.7",
     "@types/jsonwebtoken": "^8.5.5",
     "@types/node": "^16.7.4",
     "@types/uuid": "^8.3.1",
@@ -24,6 +25,7 @@
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
+    "express-fileupload": "^1.2.1",
     "jsonwebtoken": "^8.5.1",
     "mysql": "^2.18.1",
     "pg": "^8.7.1",
