--- a/client/package.json
+++ b/client/package.json
@@ -11,10 +11,15 @@
   "dependencies": {
     "@material-ui/core": "^4.12.3",
     "@material-ui/icons": "^4.11.2",
+    "@material-ui/lab": "^4.0.0-alpha.60",
+    "@types/jwt-decode": "^3.1.0",
+    "formik": "^2.2.9",
+    "jwt-decode": "^3.1.2",
     "next": "11.1.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "styled-components": "^5.3.1"
+    "styled-components": "^5.3.1",
+    "yup": "^0.32.9"
   },
   "devDependencies": {
     "@types/react": "17.0.19",
