feat: send verification email to new users
Send an email to newly registered users to verify that they
used a valid email address to register.

--- a/server/package.json
+++ b/server/package.json
@@ -10,6 +10,7 @@
     "@types/express-fileupload": "^1.1.7",
     "@types/jsonwebtoken": "^8.5.5",
     "@types/node": "^16.7.4",
+    "@types/nodemailer": "^6.4.4",
     "@types/uuid": "^8.3.1",
     "@typescript-eslint/eslint-plugin": "^4.29.3",
     "eslint": "^7.32.0",
@@ -29,6 +30,7 @@
     "express-fileupload": "^1.2.1",
     "jsonwebtoken": "^8.5.1",
     "mysql": "^2.18.1",
+    "nodemailer": "^6.7.0",
     "pg": "^8.7.1",
     "reflect-metadata": "^0.1.13",
     "typeorm": "0.2.37",
