ci: setup github workflow

--- a/server/package.json
+++ b/server/package.json
@@ -40,6 +40,7 @@
     "start": "ts-node src/index.ts",
     "dev": "ts-node-dev src/index.ts",
     "lint": "eslint src",
-    "format": "eslint src --fix"
+    "format": "eslint src --fix",
+    "test": "echo \"Error: no test specified\""
   }
 }
