--- a/.github/workflows/continuousIntegration.yml
+++ b/.github/workflows/continuousIntegration.yml
@@ -38,8 +38,8 @@ jobs:
       - name: Install dependecies(server)
         run: cd server && npm ci
 
-      - name: Test server
-        run: cd server && npm run test
-
       - name: Install dependecies(client)
         run: cd client && npm ci
+
+      - name: Build client application
+        run: cd client && npm run build
