--- a/server/package.json
+++ b/server/package.json
@@ -16,8 +16,8 @@
     "eslint": "^7.32.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^3.4.1",
+    "newman": "^5.3.0",
     "prettier": "^2.3.2",
-    "ts-node": "10.2.1",
     "ts-node-dev": "^1.1.8",
     "typescript": "4.4.2"
   },
@@ -33,6 +33,7 @@
     "nodemailer": "^6.7.0",
     "pg": "^8.7.1",
     "reflect-metadata": "^0.1.13",
+    "ts-node": "10.2.1",
     "typeorm": "0.2.37",
     "uuid": "^8.3.2"
   },
@@ -41,6 +42,6 @@
     "dev": "ts-node-dev src/index.ts",
     "lint": "eslint src",
     "format": "eslint src --fix",
-    "test": "echo \"Error: no test specified\""
+    "test": "newman run tests/postman-tests.json -e tests/development.postman_env.json"
   }
 }
